--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>СК Вклад</title>
 <link href="css/style.css" type="text/css" rel="stylesheet">
-
+<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
 	<header>
