--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<a href="#" class="ref-remont"></a>
 						<div class="detail">
 							<h2 class="remont-detail-description-h2">Качественное выполнение</h2>
-							<p class="remont-detail-description-p">в сжатые сроки</p>
+							<p class="remont-detail-description-p">в короткие сроки</p>
 							<h2 class="detail-h2"> Ремонт </h2>
 							<p class="detail-p">Ремонт квартир. Косметический, капитальный, а также, дизайнерский ремонт (евроремонт).</p>
 							<a href="#" class="button">Посмотреть</a>
@@ -258,12 +258,13 @@
 		</ul>	
 	</div>
 	
-	<div class="contacts">		
+	<div class="contacts">
+<div class="footer-logo"></div>	
 		<div class="contacts-address contact"><span>Адрес:</span> <p>г.Стерлитамак,ул.Л.Толстого</p><p>д.1,офис 205.</p> </div>
 		<div class="contacts-phone contact"><span>Телефон:</span> <p>+79170471386</p></div>
 		<div class="contacts-email contact"><span>Эл.почта:</span> <p>i-vklad@mail.ru</p></div>
 	</div>
-	<div class="footer-logo"></div>
+	
 	<div class="clear"></div>
 	<div class="copyrights">&#169; Строительная компания Вклад 2010-2016. Все права защищены </div>
 	</footer>
