--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<li><span>+7-917-011-23-44</span></li>
 				</ul>
 				<h2 class="head-h2"> Строительная компания Вклад </h2>
-				<p class="head-p">Организация ремонтных работ в жилых помещениях. Строительство зданий, домов, сооружений. Проектирование и дизайн. Выполнение кровельных работ, возведение заборов.</p>				
+				<p class="head-p">Организация ремонтных работ в жилых помещениях. Строительство зданий, домов, сооружений. Проектирование и дизайн. Выполнение кровельных работ.</p>				
 				
 				
 			
