--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<li><span>+7-917-011-23-44</span></li>
 				</ul>
 				<h2 class="head-h2"> Строительная компания Вклад </h2>
-				<p class="head-p">Организация ремонтных работ в жилых помещениях. Строительство зданий, домов, сооружений. Проектирование и дизайн. Выполнение кровельных работ.</p>				
+				<p class="head-p">Организация ремонтных работ в жилых помещениях. Строительство зданий, домов, сооружений. Проектирование и дизайн. Выполнение кровельных работ. Установка заборов.</p>				
 				
 				
 			
@@ -121,7 +121,7 @@
 	<main>
 	<div class="main-text">
 		<h2 class="main-h2"> Наши проекты </h2>
-		<p class="main-p"> СК Вклад предлагает к реализации строящиеся жилые дома, а также оказывает услуги в области дизайна помещений, проведения различного вида ремонтных работ. Мы организуем проведение кровельных работу, сооружений заборов, подготовки срубов и бань в черте города и за его пределами:</p>
+		<p class="main-p"> Строящиеся жилые дома, а также услуги в области дизайна помещений, проведения различного вида ремонтных работ. Проведение кровельных работ, сооружение заборов, подготовки срубов и бань в черте города и за его пределами.</p>
 	</div>
 	<section class="homes">
 		<div class="block block-1">
